--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^2.2.0",
     "zustand": "^4.5.0"
   },
